--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
       "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-beta.1.0.4",
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-beta.1.0.5",
       "bootstrap": "github:twbs/bootstrap@^3.3.5",
+      "d3": "npm:d3@^3.5.16",
       "esprima": "npm:esprima@^2.7.2",
       "fetch": "github:github/fetch@^0.10.1",
       "firebase": "npm:firebase@^2.4.0",
