Added data table visualization and visualization factory

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
       "firebase": "npm:firebase@^2.4.0",
       "firepad": "npm:firepad@^1.3.0",
       "font-awesome": "npm:font-awesome@^4.5.0",
+      "json": "github:systemjs/plugin-json@^0.1.0",
       "text": "github:systemjs/plugin-text@^0.0.3"
     },
     "devDependencies": {
