--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "jspm": {
     "dependencies": {
       "ace": "github:ajaxorg/ace-builds@^1.2.3",
+      "ansi-styles": "npm:ansi-styles@2.2.1",
       "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.0-beta.1.0.3",
       "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1.0.2",
       "aurelia-event-aggregator": "npm:aurelia-event-aggregator@^1.0.0-beta.1.1.0",
@@ -80,6 +81,7 @@
       "firepad": "npm:firepad@^1.3.0",
       "font-awesome": "npm:font-awesome@^4.5.0",
       "jslinq": "npm:jslinq@^1.0.15",
+      "tarball": "npm:tarball@^0.0.5",
       "text": "github:systemjs/plugin-text@^0.0.3"
     },
     "devDependencies": {
