--- a/package.json
+++ b/package.json
@@ -72,8 +72,8 @@
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-beta.1.0.5",
       "babel-core": "npm:babel-core@^6.5.2",
       "bootstrap": "github:twbs/bootstrap@^3.3.5",
-      "escodegen": "npm:escodegen@^1.8.0",
       "d3": "npm:d3@^3.5.16",
+      "escodegen": "npm:escodegen@^1.8.0",
       "esprima": "npm:esprima@^2.7.2",
       "estraverse": "npm:estraverse@^4.1.1",
       "esutils": "npm:esutils@^2.0.2",
@@ -82,6 +82,7 @@
       "firepad": "npm:firepad@^1.3.0",
       "font-awesome": "npm:font-awesome@^4.5.0",
       "jslinq": "npm:jslinq@^1.0.15",
+      "json": "github:systemjs/plugin-json@^0.1.0",
       "tarball": "npm:tarball@^0.0.5",
       "text": "github:systemjs/plugin-text@^0.0.3"
     },
