--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
       "estraverse": "npm:estraverse@^4.1.1",
       "esutils": "npm:esutils@^2.0.2",
       "fetch": "github:github/fetch@^0.10.1",
-      "firebase": "github:firebase/firebase-bower@^2.4.2",
+      "firebase": "npm:firebase@^2.4.0",
       "firepad": "npm:firepad@^1.3.0",
       "font-awesome": "npm:font-awesome@^4.5.0",
       "jquery": "npm:jquery@^2.2.2",
@@ -86,7 +86,6 @@
       "jslinq": "npm:jslinq@^1.0.15",
       "json": "github:systemjs/plugin-json@^0.1.0",
       "md5": "npm:md5@^2.1.0",
-      "npm": "npm:npm@^3.8.6",
       "tarball": "npm:tarball@^0.0.5",
       "text": "github:systemjs/plugin-text@^0.0.3"
     },
