--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
     "gulp-protractor": "1.0.0",
+    "gulp-shell": "^0.5.2",
     "gulp-sourcemaps": "^1.3.0",
     "isparta": "^3.1.0",
     "istanbul": "^0.3.13",
@@ -83,6 +84,7 @@
       "font-awesome": "npm:font-awesome@^4.5.0",
       "jquery": "npm:jquery@^2.2.2",
       "jquery-ui": "github:components/jqueryui@^1.11.4",
+      "jqwidgets-framework": "npm:jqwidgets-framework@^4.1.2",
       "jslinq": "npm:jslinq@^1.0.15",
       "json": "github:systemjs/plugin-json@^0.1.0",
       "md5": "npm:md5@^2.1.0",
