--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
       "aurelia-http-client": "npm:aurelia-http-client@^1.0.0-beta.1.1.1",
       "aurelia-loader-default": "npm:aurelia-loader-default@^1.0.0-beta.1.0.2",
       "aurelia-logging-console": "npm:aurelia-logging-console@^1.0.0-beta.1",
+      "aurelia-pal": "npm:aurelia-pal@^1.0.0-beta.1.2.2",
       "aurelia-router": "npm:aurelia-router@^1.0.0-beta.1.1.1",
       "aurelia-templating-binding": "npm:aurelia-templating-binding@^1.0.0-beta.1.0.2",
       "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-beta.1.0.4",
