--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "SeeCode.Run",
-  "version": "0.1.0",
-  "description": "A JavaScript IDE with execution trace visualizations",
+  "version": "0.2.0",
+  "description": "A Cloud IDE for Web apps with enhanced execution trace visualizations",
   "keywords": [
     "seecoderun"
   ],
-  "homepage": "",
+  "homepage": "https://github.com/seecoderun",
   "bugs": {
-    "url": "https://github.com/seecoderun"
+    "url": "https://github.com/tlatoza/SeeCodeRun/issues"
   },
   "license": "Apache-2.0",
   "author": "",
   "main": "dist/main.js",
   "repository": {
     "type": "git",
-    "url": "http://github.com/seecoderun"
+    "url": "https://github.com/tlatoza/SeeCodeRun.git"
   },
   "scripts": {
     "test": "gulp test",
@@ -59,7 +59,7 @@
       "ansi-styles": "npm:ansi-styles@2.2.1",
       "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.0-beta.1.0.3",
       "aurelia-binding": "npm:aurelia-binding@^1.0.0-beta.1.3.6",
-      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1.0.2",
+      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1.2.1",
       "aurelia-computed": "npm:aurelia-computed@^0.9.1",
       "aurelia-event-aggregator": "npm:aurelia-event-aggregator@^1.0.0-beta.1.1.0",
       "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.0-beta.1.0.2",
@@ -105,6 +105,7 @@
     }
   },
   "dependencies": {
+    "jquery": "^2.2.4",
     "esprima": "^2.7.2",
     "escodegen": "^1.8.0",
     "estraverse": "^4.1.1"
