--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
       "jslinq": "npm:jslinq@^1.0.15",
       "json": "github:systemjs/plugin-json@^0.1.0",
       "tarball": "npm:tarball@^0.0.5",
-      "text": "github:systemjs/plugin-text@^0.0.3"
+      "text": "github:systemjs/plugin-text@0.0.7"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.6.4",
