--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "SeeCode.Run",
-  "version": "0.2.0",
-  "description": "A Cloud IDE for Web apps with enhanced execution trace visualizations",
+  "version": "0.4.0",
+  "description": "See. Code. Run!",
   "keywords": [
     "seecoderun",
     "computer human interaction",
     "program comprehension",
     "software analysis",
     "debug",
-    "javascript"
+    "javascript",
+    "html"
   ],
   "homepage": "https://github.com/seecoderun",
   "bugs": {
@@ -26,11 +27,11 @@
     "e2e": "gulp serve webdriver-standalone e2e"
   },
   "devDependencies": {
-    "aurelia-bundler": "^0.3.0",
-    "aurelia-tools": "^0.1.18",
+    "aurelia-bundler": "^0.4.0",
+    "aurelia-tools": "^0.2.4",
     "babel": "^5.8.23",
     "babel-eslint": "^4.1.3",
-    "browser-sync": "^2.7.1",
+    "browser-sync": "^2.16.0",
     "conventional-changelog": "0.0.11",
     "del": "^1.1.0",
     "gulp": "^3.9.1",
@@ -46,7 +47,7 @@
     "isparta": "^3.1.0",
     "istanbul": "^0.3.13",
     "jasmine-core": "^2.1.3",
-    "jspm": "0.16.24",
+    "jspm": "0.16.45",
     "karma": "^0.13.15",
     "karma-babel-preprocessor": "^5.2.1",
     "karma-chrome-launcher": "^0.2.1",
@@ -57,7 +58,7 @@
     "require-dir": "^0.3.0",
     "run-sequence": "^1.0.2",
     "vinyl-paths": "^1.0.0",
-    "yargs": "^2.1.1"
+    "yargs": "^5.0.0"
   },
   "jspm": {
     "dependencies": {
