--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
       "aurelia-templating-binding": "npm:aurelia-templating-binding@^1.0.0-beta.1.0.2",
       "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-beta.1.0.4",
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-beta.1.0.5",
+      "aurelia-update": "npm:aurelia-update@^1.1.0",
       "babel-core": "npm:babel-core@^6.5.2",
       "bootstrap": "github:twbs/bootstrap@^3.3.5",
       "escodegen": "npm:escodegen@^1.8.0",
