problem with  branch navigator not being shown on gutter

--- a/package.json
+++ b/package.json
@@ -110,5 +110,8 @@
       }
     }
   },
-  "dependencies": {}
+  "dependencies": {
+    "aurelia-webpack-plugin": "^2.0.0-rc.2",
+    "webpack": "^3.3.0"
+  }
 }
