Before migrating to CodeMirror

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "seecoderun": "firebase-seecoderun"
+    "seecoderun": "firebase-seecoderun",
+    "default": "firebase-seecoderun"
   }
 }
