--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -3,26 +3,36 @@
   "version": "2.0.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.0.0-beta",
+    "firebase": "latest",
+    "firepad": "latest",
     "jquery": "^3.2.1",
-    "jss": "^9.0.0",
+    "jscodeshift": "latest",
+    "jss": "latest",
     "jss-preset-default": "^4.0.1",
-    "material-ui": "^1.0.0-beta.18",
+    "lodash": "latest",
+    "material-ui": "^1.0.0-beta.22",
     "material-ui-icons": "^1.0.0-beta.17",
-    "popper.js": "^1.12.6",
-    "prop-types": "^15.6.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-jss": "^7.2.0",
-    "react-redux": "^5.0.6",
-    "react-scripts": "1.0.14",
-    "react-transition-group": "^2.3.0-beta.0",
-    "reactstrap": "^5.0.0-alpha.3",
-    "recompose": "^0.26.0",
-    "redux": "^3.7.2",
-    "redux-observable": "^0.16.0",
-    "rxjs": "^5.4.3",
+    "monaco-editor": "^0.10.1",
+    "prop-types": "latest",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "react-grid-layout": "latest",
+    "react-jss": "latest",
+    "react-redux": "latest",
+    "react-scripts": "latest",
+    "recompose": "latest",
+    "redux": "latest",
+    "redux-observable": "latest",
+    "rxjs": "latest",
+    "store": "latest",
     "typeface-roboto": "0.0.43"
+  },
+  "devDependencies": {
+    "install-peers": "^1.0.2",
+    "redux-devtools": "^3.4.1",
+    "redux-devtools-diff-monitor": "^5.0.5",
+    "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools-log-monitor": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
