--- a/scr-app/public/manifest.json
+++ b/scr-app/public/manifest.json
@@ -1,10 +1,10 @@
 {
   "short_name": "SCR",
-  "name": "See Code Run",
+  "name": "seeCode.run",
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "192x192",
+      "sizes": "16x16",
       "type": "image/png"
     }
   ],
