--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -17,13 +17,14 @@
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-grid-layout": "latest",
+    "react-inspector": "^2.2.2",
     "react-jss": "latest",
     "react-redux": "latest",
     "react-scripts": "latest",
     "recompose": "latest",
     "redux": "latest",
     "redux-observable": "latest",
-    "rxjs": "latest",
+    "rxjs": "^5.5.5",
     "store": "latest",
     "typeface-roboto": "0.0.43"
   },
