--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -6,11 +6,10 @@
     "firebase": "latest",
     "firepad": "latest",
     "jquery": "^3.2.1",
-    "jscodeshift": "latest",
+    "jscodeshift": "^0.4.0",
     "jss": "latest",
-    "jss-preset-default": "^4.0.1",
     "lodash": "latest",
-    "material-ui": "^1.0.0-beta.22",
+    "material-ui": "^1.0.0-beta.27",
     "material-ui-icons": "^1.0.0-beta.17",
     "monaco-editor": "^0.10.1",
     "prop-types": "latest",
@@ -19,6 +18,7 @@
     "react-grid-layout": "latest",
     "react-inspector": "^2.2.2",
     "react-jss": "latest",
+    "react-popper": "^0.7.5",
     "react-redux": "latest",
     "react-scripts": "latest",
     "recompose": "latest",
