--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -1,39 +1,36 @@
 {
   "name": "scr-app",
-  "version": "2.0.0",
+  "version": "0.0.7",
   "private": true,
   "dependencies": {
-    "firebase": "latest",
-    "firepad": "latest",
-    "jquery": "^3.2.1",
+    "firebase": "^4.9.0",
+    "firepad": "^1.4.0",
+    "jsan": "^3.1.9",
     "jscodeshift": "^0.4.0",
-    "jss": "latest",
-    "lodash": "latest",
-    "material-ui": "^1.0.0-beta.27",
+    "jss": "^9.6.0",
+    "lodash": "^4.17.4",
+    "material-ui": "^1.0.0-beta.30",
     "material-ui-icons": "^1.0.0-beta.17",
     "monaco-editor": "^0.10.1",
-    "prop-types": "latest",
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2",
-    "react-grid-layout": "latest",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-grid-layout": "^0.16.2",
     "react-inspector": "^2.2.2",
-    "react-jss": "latest",
-    "react-popper": "^0.7.5",
-    "react-redux": "latest",
-    "react-scripts": "latest",
-    "recompose": "latest",
-    "redux": "latest",
-    "redux-observable": "latest",
-    "rxjs": "^5.5.5",
-    "store": "latest",
+    "react-jss": "^8.2.1",
+    "react-redux": "^5.0.6",
+    "react-scripts": "^1.1.0",
+    "redux": "^3.7.2",
+    "redux-observable": "^0.17.0",
+    "rxjs": "^5.5.6",
+    "store": "^2.0.12",
     "typeface-roboto": "0.0.43"
   },
   "devDependencies": {
     "install-peers": "^1.0.2",
     "redux-devtools": "^3.4.1",
-    "redux-devtools-diff-monitor": "^5.0.5",
-    "redux-devtools-dock-monitor": "^1.1.2",
-    "redux-devtools-log-monitor": "latest"
+    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools-log-monitor": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
