--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -3,13 +3,17 @@
   "version": "0.0.7",
   "private": true,
   "dependencies": {
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-standalone": "^6.26.0",
     "firebase": "^4.9.0",
     "firepad": "^1.4.0",
+    "immutable": "^4.0.0-rc.9",
     "jsan": "^3.1.9",
     "jscodeshift": "^0.4.0",
     "jss": "^9.6.0",
     "lodash": "^4.17.4",
-    "material-ui": "^1.0.0-beta.30",
+    "material-ui": "^1.0.0-beta.33",
     "material-ui-icons": "^1.0.0-beta.17",
     "monaco-editor": "^0.10.1",
     "prop-types": "^15.6.0",
@@ -27,9 +31,13 @@
     "typeface-roboto": "0.0.43"
   },
   "devDependencies": {
+    "eslint": "^4.16.0",
+    "eslint-config-google": "^0.9.1",
+    "eslint-plugin-react": "^7.6.1",
     "install-peers": "^1.0.2",
     "redux-devtools": "^3.4.1",
     "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools-filterable-log-monitor": "^0.8.0",
     "redux-devtools-log-monitor": "^1.4.0"
   },
   "scripts": {
