--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -2,6 +2,7 @@
   "name": "scr-app",
   "version": "0.0.7",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -13,7 +14,7 @@
     "jscodeshift": "^0.4.0",
     "jss": "^9.6.0",
     "lodash": "^4.17.4",
-    "material-ui": "^1.0.0-beta.33",
+    "material-ui": "^1.0.0-beta.35",
     "material-ui-icons": "^1.0.0-beta.17",
     "monaco-editor": "^0.10.1",
     "prop-types": "^15.6.0",
