--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -7,6 +7,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-standalone": "^6.26.0",
+    "classnames": "^2.2.5",
     "firebase": "^4.9.0",
     "firepad": "^1.4.0",
     "immutable": "^4.0.0-rc.9",
@@ -14,13 +15,13 @@
     "jscodeshift": "^0.4.0",
     "jss": "^9.6.0",
     "lodash": "^4.17.4",
-    "material-ui": "^1.0.0-beta.35",
-    "material-ui-icons": "^1.0.0-beta.17",
+    "material-ui": "^1.0.0-beta.36",
+    "material-ui-icons": "^1.0.0-beta.36",
     "monaco-editor": "^0.10.1",
-    "prop-types": "^15.6.0",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-grid-layout": "^0.16.2",
+    "react-grid-layout": "^0.16.5",
     "react-inspector": "^2.2.2",
     "react-jss": "^8.2.1",
     "react-redux": "^5.0.6",
