new SVG SCR icon. Added chat: users, messages, autocomplete users,
Added toggable navigation bar, share actions and logic.
Adde Notificaion center, switchabel themes dark/light

--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.7",
   "private": true,
   "proxy": "http://localhost:5000",
+  "homepage": "https://seecode.run",
   "dependencies": {
+    "autosuggest-highlight": "^3.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-standalone": "^6.26.0",
@@ -11,6 +13,8 @@
     "firebase": "^4.9.0",
     "firepad": "^1.4.0",
     "immutable": "^4.0.0-rc.9",
+    "jquery": "^3.3.1",
+    "jquery-ui": "^1.12.1",
     "jsan": "^3.1.9",
     "jscodeshift": "^0.4.0",
     "jss": "^9.6.0",
@@ -20,12 +24,15 @@
     "monaco-editor": "^0.10.1",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
+    "react-autosuggest": "^9.3.4",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.2.0",
     "react-grid-layout": "^0.16.5",
     "react-inspector": "^2.2.2",
     "react-jss": "^8.2.1",
     "react-redux": "^5.0.6",
     "react-scripts": "^1.1.0",
+    "react-sizeme": "^2.3.6",
     "redux": "^3.7.2",
     "redux-observable": "^0.17.0",
     "rxjs": "^5.5.6",
