--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -23,6 +23,7 @@
     "material-ui-icons": "^1.0.0-beta.36",
     "monaco-editor": "^0.10.1",
     "prop-types": "^15.6.1",
+    "randomcolor": "^0.5.3",
     "react": "^16.2.0",
     "react-autosuggest": "^9.3.4",
     "react-copy-to-clipboard": "^5.0.1",
