Add LiveExpression WidgetProvider, Store, Trace Popups, Action and Reducers. Starts Branch Navigator, and Trace Table.

--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -19,11 +19,12 @@
     "jscodeshift": "^0.4.0",
     "jss": "^9.6.0",
     "lodash": "^4.17.4",
-    "material-ui": "^1.0.0-beta.36",
+    "material-ui": "^1.0.0-beta.38",
     "material-ui-icons": "^1.0.0-beta.36",
     "monaco-editor": "^0.10.1",
     "prop-types": "^15.6.1",
     "randomcolor": "^0.5.3",
+    "rc-slider": "^8.6.1",
     "react": "^16.2.0",
     "react-autosuggest": "^9.3.4",
     "react-copy-to-clipboard": "^5.0.1",
@@ -31,12 +32,13 @@
     "react-grid-layout": "^0.16.5",
     "react-inspector": "^2.2.2",
     "react-jss": "^8.2.1",
-    "react-redux": "^5.0.6",
+    "react-redux": "^5.0.7",
     "react-scripts": "^1.1.0",
     "react-sizeme": "^2.3.6",
     "redux": "^3.7.2",
     "redux-observable": "^0.17.0",
-    "rxjs": "^5.5.6",
+    "rxjs": "^5.5.7",
+    "save": "^2.3.2",
     "store": "^2.0.12",
     "typeface-roboto": "0.0.43"
   },
