--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:5000",
   "homepage": "https://seecode.run",
   "dependencies": {
+    "@material-ui/lab": "^1.0.0-alpha.0",
     "autosuggest-highlight": "^3.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -35,6 +36,7 @@
     "react-redux": "^5.0.7",
     "react-scripts": "^1.1.0",
     "react-sizeme": "^2.3.6",
+    "react-swipeable-views": "^0.12.13",
     "redux": "^3.7.2",
     "redux-observable": "^0.17.0",
     "rxjs": "^5.5.7",
