--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -1,15 +1,16 @@
 {
   "name": "scr-app",
-  "version": "0.0.7",
+  "version": "0.0.1",
   "private": true,
   "proxy": "http://localhost:5000",
   "homepage": "https://seecode.run",
   "dependencies": {
+    "@babel/standalone": "^7.0.0-beta.44",
+    "@material-ui/icons": "^1.0.0-beta.42",
     "@material-ui/lab": "^1.0.0-alpha.0",
     "autosuggest-highlight": "^3.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-standalone": "^6.26.0",
     "classnames": "^2.2.5",
     "deep-diff": "^1.0.0-pre.2",
     "firebase": "^4.9.0",
@@ -18,31 +19,30 @@
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
     "jsan": "^3.1.9",
-    "jscodeshift": "^0.4.0",
+    "jscodeshift": "^0.5.0",
     "jscodetracker": "../../jscodetracker",
     "jss": "^9.6.0",
     "lodash": "^4.17.5",
     "material-ui": "^1.0.0-beta.40",
     "material-ui-icons": "^1.0.0-beta.36",
+    "mdi-material-ui": "^3.2.0",
     "monaco-editor": "^0.11.1",
     "prop-types": "^15.6.1",
     "randomcolor": "^0.5.3",
     "rc-slider": "^8.6.1",
-    "react": "^16.3.0-rc.0",
+    "react": "^16.3.1",
     "react-autosuggest": "^9.3.4",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.3.0-rc.0",
+    "react-dom": "^16.3.1",
     "react-grid-layout": "^0.16.5",
     "react-highlight-words": "^0.11.0",
     "react-inspector": "^2.2.2",
     "react-jss": "^8.2.1",
     "react-redux": "^5.0.7",
-    "react-scripts": "^1.1.0",
     "react-sizeme": "^2.3.6",
     "react-swipeable-views": "^0.12.13",
     "redux": "^3.7.2",
     "redux-observable": "^0.17.0",
-    "redux-tools": "^1.0.3",
     "rxjs": "^5.5.7",
     "save": "^2.3.2",
     "store": "^2.0.12",
@@ -53,16 +53,20 @@
     "eslint-config-google": "^0.9.1",
     "eslint-plugin-react": "^7.6.1",
     "install-peers": "^1.0.2",
+    "react-app-rewired": "^1.5.0",
+    "react-scripts": "^1.1.4",
     "redux-devtools": "^3.4.1",
     "redux-devtools-dock-monitor": "^1.1.3",
     "redux-devtools-filterable-log-monitor": "^0.8.0",
-    "redux-devtools-log-monitor": "^1.4.0"
+    "redux-devtools-log-monitor": "^1.4.0",
+    "source-map-explorer": "^1.5.0"
   },
   "scripts": {
     "install-app": "(npm install) && (rm -rf ./public/fireco/monaco-editor/; cp -r ./node_modules/monaco-editor/ ./public/fireco/monaco-editor/)",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "analyze": "source-map-explorer build/static/js/main.*",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   }
 }
