--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -4,16 +4,15 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "homepage": "https://seecode.run",
+  "sideEffects": false,
   "dependencies": {
     "@babel/standalone": "^7.0.0-beta.44",
     "@material-ui/icons": "^1.0.0-beta.42",
     "@material-ui/lab": "^1.0.0-alpha.0",
     "autosuggest-highlight": "^3.1.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "classnames": "^2.2.5",
     "deep-diff": "^1.0.0-pre.2",
-    "firebase": "^4.9.0",
+    "firebase": "^4.13.0-0",
     "firepad": "^1.4.0",
     "immutable": "^4.0.0-rc.9",
     "jquery": "^3.3.1",
@@ -21,9 +20,9 @@
     "jsan": "^3.1.9",
     "jscodeshift": "^0.5.0",
     "jscodetracker": "../../jscodetracker",
-    "jss": "^9.6.0",
+    "jss": "^9.8.1",
     "lodash": "^4.17.5",
-    "material-ui": "^1.0.0-beta.40",
+    "material-ui": "^1.0.0-beta.41",
     "material-ui-icons": "^1.0.0-beta.36",
     "mdi-material-ui": "^3.2.0",
     "monaco-editor": "^0.11.1",
@@ -34,24 +33,24 @@
     "react-autosuggest": "^9.3.4",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.3.1",
-    "react-grid-layout": "^0.16.5",
+    "react-grid-layout": "^0.16.6",
     "react-highlight-words": "^0.11.0",
     "react-inspector": "^2.2.2",
-    "react-jss": "^8.2.1",
+    "react-jss": "^8.4.0",
     "react-redux": "^5.0.7",
-    "react-sizeme": "^2.3.6",
+    "react-sizeme": "^2.4.2",
     "react-swipeable-views": "^0.12.13",
     "redux": "^3.7.2",
     "redux-observable": "^0.17.0",
-    "rxjs": "^5.5.7",
+    "rxjs": "^5.5.8",
     "save": "^2.3.2",
     "store": "^2.0.12",
-    "typeface-roboto": "0.0.43"
+    "typeface-roboto": "0.0.54"
   },
   "devDependencies": {
     "eslint": "^4.16.0",
     "eslint-config-google": "^0.9.1",
-    "eslint-plugin-react": "^7.6.1",
+    "eslint-plugin-react": "^7.7.0",
     "install-peers": "^1.0.2",
     "react-app-rewired": "^1.5.0",
     "react-scripts": "^1.1.4",
