--- a/functions/package.json
+++ b/functions/package.json
@@ -9,8 +9,8 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "5.4.2",
-    "firebase-functions": "0.7.2",
+    "firebase-admin": "^5.12.0",
+    "firebase-functions": "^1.0.1",
     "firepad": "^1.4.0"
   },
   "private": true
