Fixes monaco editor error (windows URI). Fixes firebase hosting webworker cache => no-cache. Adds deployment scripts and doc.

--- a/firebase.json
+++ b/firebase.json
@@ -2,6 +2,17 @@
   "hosting": {
     "firebase": "seecoderun",
     "public": "scr-app/build",
+    "headers": [
+      {
+        "source": "/service-worker.js",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "no-cache"
+          }
+        ]
+      }
+    ],
     "rewrites": [
       {
         "source": "/firebase-seecoderun/us-central1/getPastebinId",
