--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,6 @@ scr-app/build
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+firebase-debug.log*
 functions/firebase-debug.log*
 functions/cloud-functions-emulator.log*
