--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -47,6 +47,7 @@
     "typeface-roboto": "0.0.54"
   },
   "devDependencies": {
+    "@types/react": "^16.3.8",
     "eslint": "^4.16.0",
     "eslint-config-google": "^0.9.1",
     "eslint-plugin-react": "^7.7.0",
