--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -25,6 +25,7 @@
     "material-ui-icons": "^1.0.0-beta.36",
     "mdi-material-ui": "^3.2.0",
     "monaco-editor": "^0.11.1",
+    "parse5": "^4.0.0",
     "prop-types": "^15.6.1",
     "randomcolor": "^0.5.3",
     "rc-slider": "^8.6.1",
