cloud functions have separate config files and scripts for dev and prod.

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,7 @@
 {
   "projects": {
-    "seecoderun": "firebase-seecoderun",
+    "development": "seecoderun-2",
+    "production": "firebase-seecoderun",
     "default": "firebase-seecoderun"
   }
 }
