--- a/functions/.gitignore
+++ b/functions/.gitignore
@@ -1,24 +1,24 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
 # dependencies
-/public/fireco/monaco-editor*
-/node_modules
-
+*node_modules
 # testing
 /coverage
 
-# dev
-firebaseDevConfig.js
 # production
-/build
+cloud-functions.json
+serviceAccountKey*
 
 # misc
+.vscode/
+.idea/
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+#logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+firebase-debug.log*
+cloud-functions-emulator.log*
