--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -54,6 +54,7 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "cross-env": "^5.1.4",
     "eslint": "^4.16.0",
     "eslint-config-google": "^0.9.1",
     "eslint-plugin-react": "^7.7.0",
@@ -69,9 +70,10 @@
   "scripts": {
     "install-and-monaco": "(npm install) && (rm -rf ./public/fireco/monaco-editor/; cp -r ./node_modules/monaco-editor/ ./public/fireco/monaco-editor/)",
     "start": "react-app-rewired start",
-    "start-url": "export PUBLIC_URL='https://seecode.run'; react-app-rewired start",
-    "build-with-source-maps": "export PUBLIC_URL='https://seecode.run'; react-app-rewired build; rm -rf ./build/fireco/monaco-editor/dev/; rm -rf ./build/fireco/monaco-editor/esm/",
-    "build": "export PUBLIC_URL='https://seecode.run'; export GENERATE_SOURCEMAP=false; react-app-rewired build; rm -rf ./build/fireco/monaco-editor/dev/;rm -rf ./build/fireco/monaco-editor/esm/;rm -rf ./build/fireco/monaco-editor/min-maps/; ",
+    "start-url": "cross-env PUBLIC_URL='https://seecode.run'; react-app-rewired start",
+    "build-with-source-maps": "cross-env PUBLIC_URL='https://seecode.run'; react-app-rewired build; rm -rf ./build/fireco/monaco-editor/dev/; rm -rf ./build/fireco/monaco-editor/esm/",
+    "build": "cross-env PUBLIC_URL='https://seecode.run'; cross-env GENERATE_SOURCEMAP=false; react-app-rewired build; rm -rf ./build/fireco/monaco-editor/dev/;rm -rf ./build/fireco/monaco-editor/esm/;rm -rf ./build/fireco/monaco-editor/min-maps/; ",
+    "build-dev": "firebase use development; cross-env PUBLIC_URL='https://seecoderun-2.firebaseapp.com'; react-app-rewired build; rm -rf ./build/fireco/monaco-editor/esm/; firebase use default",
     "analyze-main": "source-map-explorer build/static/js/main.*",
     "analyze-bundle": "bundle-buddy build/static/*.map build/static/*/*.map",
     "test": "react-app-rewired test --env=jsdom",
