--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -8,8 +8,9 @@
   "dependencies": {
     "@babel/standalone": "^7.0.0-beta.44",
     "@material-ui/icons": "^1.0.0-beta.42",
-    "@material-ui/lab": "^1.0.0-alpha.0",
+    "@material-ui/lab": "^1.0.0-alpha.1",
     "autosuggest-highlight": "^3.1.1",
+    "babel-plugin-dynamic-import-webpack": "^1.0.2",
     "classnames": "^2.2.5",
     "deep-diff": "^1.0.0-pre.2",
     "firebase": "^4.12.1",
@@ -23,31 +24,29 @@
     "jscodetracker": "../../jscodetracker",
     "jss": "^9.8.1",
     "lodash": "^4.17.5",
-    "material-ui": "^1.0.0-beta.41",
-    "material-ui-icons": "^1.0.0-beta.36",
+    "material-ui": "^1.0.0-beta.42",
     "mdi-material-ui": "^3.2.0",
     "monaco-editor": "^0.12.0",
     "parse5": "^4.0.0",
     "prop-types": "^15.6.1",
     "randomcolor": "^0.5.3",
     "rc-slider": "^8.6.1",
-    "react": "^16.3.1",
+    "react": "^16.3.2",
     "react-autosuggest": "^9.3.4",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.3.1",
+    "react-dom": "^16.3.2",
     "react-grid-layout": "^0.16.6",
     "react-highlight-words": "^0.11.0",
     "react-inspector": "^2.2.2",
     "react-jss": "^8.4.0",
     "react-redux": "^5.0.7",
-    "react-sizeme": "^2.4.2",
     "react-swipeable-views": "^0.12.13",
     "redux": "^3.7.2",
     "redux-observable": "^0.17.0",
-    "rxjs": "^5.5.8",
+    "rxjs": "^5.5.10",
     "save": "^2.3.2",
     "store": "^2.0.12",
-    "typeface-roboto": "0.0.54"
+    "typeface-roboto": "^0.0.54"
   },
   "devDependencies": {
     "@types/react": "^16.3.8",
