Fixes breaking changes from MUI, Monaco. - Trace Table: Removes dividers, abstracts Context HOC, triggers total count, and  exports its ref.

--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -7,11 +7,12 @@
   "homepage": "https://seecode.run",
   "dependencies": {
     "@babel/standalone": "^7.0.0-beta.44",
-    "@material-ui/icons": "^1.0.0-beta.42",
+    "@material-ui/icons": "^1.0.0-beta.43",
     "@material-ui/lab": "^1.0.0-alpha.1",
     "autosuggest-highlight": "^3.1.1",
     "babel-plugin-dynamic-import-webpack": "^1.0.2",
     "classnames": "^2.2.5",
+    "console-feed": "^2.8.0",
     "deep-diff": "^1.0.0-pre.2",
     "firebase": "^4.12.1",
     "firepad": "^1.4.0",
@@ -24,7 +25,7 @@
     "jscodetracker": "../../jscodetracker",
     "jss": "^9.8.1",
     "lodash": "^4.17.5",
-    "material-ui": "^1.0.0-beta.42",
+    "material-ui": "^1.0.0-beta.43",
     "mdi-material-ui": "^3.2.0",
     "monaco-editor": "^0.12.0",
     "parse5": "^4.0.0",
