new visuaal queries to trace search

--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -6,57 +6,59 @@
   "proxy": "http://localhost:5000",
   "homepage": "https://seecode.run",
   "dependencies": {
-    "@babel/standalone": "^7.0.0-beta.44",
-    "@material-ui/icons": "^1.0.0-beta.43",
-    "@material-ui/lab": "^1.0.0-alpha.1",
+    "@babel/standalone": "^7.0.0-beta.51",
+    "@material-ui/core": "^1.2.2",
+    "@material-ui/icons": "^1.1.0",
+    "@material-ui/lab": "^1.0.0-alpha.5",
     "autosuggest-highlight": "^3.1.1",
     "babel-plugin-dynamic-import-webpack": "^1.0.2",
-    "classnames": "^2.2.5",
+    "classnames": "^2.2.6",
     "deep-diff": "^1.0.0-pre.2",
     "firebase": "^4.12.1",
     "firepad": "^1.4.0",
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
-    "jsan": "^3.1.9",
-    "jscodeshift": "^0.5.0",
+    "jsan": "^3.1.10",
+    "jscodeshift": "^0.5.1",
     "jscodetracker": "../../jscodetracker",
-    "jss": "^9.8.1",
-    "lodash": "^4.17.5",
-    "material-ui": "^1.0.0-beta.45",
-    "mdi-material-ui": "^3.2.0",
-    "monaco-editor": "^0.12.0",
+    "jss": "^9.8.6",
+    "lodash": "^4.17.10",
+    "mdi-material-ui": "^5.1.1",
+    "monaco-editor": "^0.13.1",
     "parse5": "^4.0.0",
-    "prop-types": "^15.6.1",
+    "prop-types": "^15.5.7-alpha.1",
     "randomcolor": "^0.5.3",
     "rc-slider": "^8.6.1",
-    "react": "^16.3.2",
+    "react": "^16.4.1",
     "react-autosuggest": "^9.3.4",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.3.2",
+    "react-dom": "^16.4.1",
     "react-grid-layout": "^0.16.6",
     "react-highlight-words": "^0.11.0",
     "react-inspector": "^2.3.0",
     "react-jss": "^8.4.0",
     "react-redux": "^5.0.7",
-    "react-swipeable-views": "^0.12.13",
+    "react-swipeable-views": "^0.12.14",
     "redux": "^3.7.2",
-    "redux-observable": "^0.17.0",
+    "redux-observable": "^0.18.0",
     "rxjs": "^5.5.10",
     "save": "^2.3.2",
     "store": "^2.0.12",
     "typeface-roboto": "^0.0.54"
   },
   "devDependencies": {
-    "@types/react": "^16.3.8",
-    "babel-cli": "^6.26.0",
+    "@babel/cli": "^7.0.0-beta.47",
+    "@babel/core": "^7.0.0-beta.47",
+    "@babel/runtime": "^7.0.0-beta.47",
+    "@types/react": "^16.3.14",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "cross-env": "^5.1.4",
+    "cross-env": "^5.1.5",
     "eslint": "^4.16.0",
     "eslint-config-google": "^0.9.1",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react": "^7.8.2",
     "install-peers": "^1.0.2",
-    "react-app-rewired": "^1.5.0",
+    "react-app-rewired": "^1.5.2",
     "react-scripts": "^1.1.4",
     "redux-devtools": "^3.4.1",
     "redux-devtools-dock-monitor": "^1.1.3",
