Updates material-ui. Adds Windows compatible npm scripts. Fixes default dev vs prod behavior. Removes filters in console table. Adds Visual tags using React components on mock layout.

--- a/functions/package.json
+++ b/functions/package.json
@@ -3,6 +3,7 @@
   "description": "Cloud Functions for seeCode.run: adds, copies and authenticate pastebins. Also does backups",
   "scripts": {
     "serve": "firebase use development; cross-env NODE_ENV=development firebase serve --only functions",
+    "win-serve": "firebase use development & firebase serve --only functions",
     "serve-prod": "firebase use production; cross-env NODE_ENV=development firebase serve --only functions",
     "shell": "cross-env NODE_ENV=development firebase experimental:functions:shell",
     "start": "cross-env NODE_ENV=development npm run shell",
