--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -7,7 +7,7 @@
   "homepage": "https://seecode.run",
   "dependencies": {
     "@babel/standalone": "^7.0.0-beta.51",
-    "@material-ui/core": "^1.2.2",
+    "@material-ui/core": "^1.3.1",
     "@material-ui/icons": "^1.1.0",
     "@material-ui/lab": "^1.0.0-alpha.5",
     "autosuggest-highlight": "^3.1.1",
@@ -68,6 +68,7 @@
   },
   "scripts": {
     "install-and-monaco": "(npm install) && (rm -rf ./public/fireco/monaco-editor/; cp -r ./node_modules/monaco-editor/ ./public/fireco/monaco-editor/)",
+    "win-install-and-monaco": "npm install & rm -rf .\\public\\fireco\\monaco-editor\\ & cp -r .\\node_modules\\monaco-editor\\ .\\public\\fireco\\monaco-editor\\",
     "start": "react-app-rewired start",
     "start-url": "cross-env PUBLIC_URL='https://seecode.run' react-app-rewired start",
     "build-with-source-maps": "cross-env PUBLIC_URL='https://seecode.run' react-app-rewired build; rm -rf ./build/fireco/monaco-editor/dev/; rm -rf ./build/fireco/monaco-editor/esm/",
