--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -6,10 +6,10 @@
   "proxy": "http://localhost:5000",
   "homepage": "https://seecode.run",
   "dependencies": {
-    "@babel/standalone": "^7.0.0-beta.51",
-    "@material-ui/core": "^1.3.1",
-    "@material-ui/icons": "^1.1.0",
-    "@material-ui/lab": "^1.0.0-alpha.5",
+    "@babel/standalone": "^7.0.0-beta.55",
+    "@material-ui/core": "^1.4.2",
+    "@material-ui/icons": "^2.0.0",
+    "@material-ui/lab": "^1.0.0-alpha.8",
     "autosuggest-highlight": "^3.1.1",
     "babel-plugin-dynamic-import-webpack": "^1.0.2",
     "classnames": "^2.2.6",
@@ -23,25 +23,24 @@
     "jscodetracker": "../../jscodetracker",
     "jss": "^9.8.6",
     "lodash": "^4.17.10",
-    "mdi-material-ui": "^5.1.1",
+    "mdi-material-ui": "^5.2.0",
     "monaco-editor": "^0.13.1",
     "parse5": "^4.0.0",
-    "prop-types": "^15.5.7-alpha.1",
+    "prop-types": "^15.6.2",
     "randomcolor": "^0.5.3",
-    "rc-slider": "^8.6.1",
     "react": "^16.4.1",
     "react-autosuggest": "^9.3.4",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-grid-layout": "^0.16.6",
-    "react-highlight-words": "^0.11.0",
+    "react-highlight-words": "^0.12.0",
     "react-inspector": "^2.3.0",
-    "react-jss": "^8.4.0",
+    "react-jss": "^8.6.1",
     "react-redux": "^5.0.7",
-    "react-swipeable-views": "^0.12.14",
-    "redux": "^3.7.2",
-    "redux-observable": "^0.18.0",
-    "rxjs": "^5.5.10",
+    "react-swipeable-views": "^0.12.15",
+    "redux": "^4.0.0",
+    "redux-observable": "^1.0.0",
+    "rxjs": "^6.2.2",
     "save": "^2.3.2",
     "store": "^2.0.12",
     "typeface-roboto": "^0.0.54"
