--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -6,37 +6,37 @@
   "proxy": "http://localhost:5000",
   "homepage": "https://seecode.run",
   "dependencies": {
-    "@babel/standalone": "^7.0.0-beta.55",
-    "@material-ui/core": "^1.4.2",
-    "@material-ui/icons": "^2.0.0",
-    "@material-ui/lab": "^1.0.0-alpha.8",
+    "@babel/standalone": "^7.0.0",
+    "@material-ui/core": "^3.1.1",
+    "@material-ui/icons": "^3.0.1",
+    "@material-ui/lab": "^3.0.0-alpha.17",
     "autosuggest-highlight": "^3.1.1",
     "babel-plugin-dynamic-import-webpack": "^1.0.2",
     "classnames": "^2.2.6",
-    "deep-diff": "^1.0.0-pre.2",
+    "deep-diff": "^1.0.1",
     "firebase": "^4.13.1",
-    "firepad": "^1.4.0",
+    "firepad": "^1.5.0",
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
     "jsan": "^3.1.10",
     "jscodeshift": "^0.5.1",
-    "jss": "^9.8.6",
+    "jss": "^9.8.7",
     "lodash": "^4.17.10",
     "mdi-material-ui": "^5.2.0",
-    "monaco-editor": "^0.13.1",
+    "monaco-editor": "^0.14.3",
     "parse5": "^4.0.0",
     "prop-types": "^15.6.2",
     "randomcolor": "^0.5.3",
-    "react": "^16.4.1",
+    "react": "^16.5.2",
     "react-autosuggest": "^9.3.4",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.4.1",
+    "react-dom": "^16.5.2",
     "react-grid-layout": "^0.16.6",
     "react-highlight-words": "^0.12.0",
     "react-inspector": "^2.3.0",
     "react-jss": "^8.6.1",
     "react-redux": "^5.0.7",
-    "react-swipeable-views": "^0.12.15",
+    "react-swipeable-views": "^0.12.16",
     "redux": "^4.0.0",
     "redux-observable": "^1.0.0",
     "rxjs": "^6.2.2",
@@ -45,16 +45,32 @@
     "typeface-roboto": "^0.0.54"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.47",
-    "@babel/core": "^7.0.0-beta.47",
-    "@babel/runtime": "^7.0.0-beta.47",
+    "@babel/cli": "7.0.0",
+    "@babel/core": "7.0.0",
+    "@babel/node": "7.0.0",
+    "@babel/plugin-proposal-class-properties": "7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
+    "@babel/plugin-transform-object-assign": "7.0.0",
+    "@babel/plugin-transform-runtime": "7.0.0",
+    "@babel/preset-env": "7.0.0",
+    "@babel/preset-react": "7.0.0",
+    "@babel/register": "7.0.0",
+    "@babel/runtime": "7.0.0",
     "@types/react": "^16.3.14",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "cross-env": "^5.1.5",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.0",
+    "babel-plugin-istanbul": "^5.0.0",
+    "babel-plugin-module-resolver": "^3.0.0",
+    "babel-plugin-preval": "^2.0.0",
+    "babel-plugin-react-remove-properties": "^0.2.5",
+    "babel-plugin-transform-dev-warning": "^0.1.0",
+    "babel-plugin-transform-react-constant-elements": "^6.23.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.10",
+    "cross-env": "^5.2.0",
     "eslint": "^4.16.0",
     "eslint-config-google": "^0.9.1",
-    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-react": "^7.10.0",
     "install-peers": "^1.0.2",
     "react-app-rewired": "^1.5.2",
     "react-scripts": "^1.1.4",
