Updates most packages, specially MUI and Parse5: fixes breaking changes. Favors Roboto direct link to NPM.

--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -6,44 +6,43 @@
   "proxy": "http://localhost:5000",
   "homepage": "https://seecode.run",
   "dependencies": {
-    "@babel/standalone": "^7.0.0",
-    "@material-ui/core": "^3.1.1",
-    "@material-ui/icons": "^3.0.1",
-    "@material-ui/lab": "^3.0.0-alpha.17",
+    "@babel/standalone": "^7.3.1",
+    "@material-ui/core": "^3.9.0",
+    "@material-ui/icons": "^3.0.2",
+    "@material-ui/lab": "^3.0.0-alpha.28",
     "autosuggest-highlight": "^3.1.1",
-    "babel-plugin-dynamic-import-webpack": "^1.0.2",
+    "babel-plugin-dynamic-import-webpack": "^1.1.0",
     "classnames": "^2.2.6",
-    "deep-diff": "^1.0.1",
-    "firebase": "^4.13.1",
-    "firepad": "^1.5.0",
+    "deep-diff": "^1.0.2",
+    "firebase": "^5.8.0",
+    "firepad": "^1.5.1",
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
-    "jsan": "^3.1.10",
-    "jscodeshift": "^0.5.1",
-    "jss": "^9.8.7",
-    "lodash": "^4.17.10",
-    "mdi-material-ui": "^5.2.0",
-    "monaco-editor": "^0.14.3",
-    "monaco-editor-webpack-plugin": "^1.5.4",
-    "parse5": "^4.0.0",
+    "jsan": "^3.1.13",
+    "jscodeshift": "^0.6.2",
+    "jss": "^10.0.0-alpha.8",
+    "lodash": "^4.17.11",
+    "mdi-material-ui": "^5.8.0",
+    "monaco-editor": "^0.15.6",
+    "monaco-editor-webpack-plugin": "^1.7.0",
+    "parse5": "^5.1.0",
     "prop-types": "^15.6.2",
     "randomcolor": "^0.5.3",
-    "react": "^16.5.2",
+    "react": "^16.7.0",
     "react-autosuggest": "^9.3.4",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.5.2",
+    "react-dom": "^16.7.0",
     "react-grid-layout": "^0.16.6",
     "react-highlight-words": "^0.12.0",
     "react-inspector": "^2.3.0",
     "react-jss": "^8.6.1",
     "react-redux": "^5.0.7",
-    "react-swipeable-views": "^0.12.16",
+    "react-swipeable-views": "^0.13.1",
     "redux": "^4.0.0",
     "redux-observable": "^1.0.0",
     "rxjs": "^6.2.2",
     "save": "^2.3.2",
-    "store": "^2.0.12",
-    "typeface-roboto": "^0.0.54"
+    "store": "^2.0.12"
   },
   "devDependencies": {
     "@babel/cli": "7.0.0",
