--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -6,77 +6,78 @@
   "proxy": "http://localhost:5000",
   "homepage": "https://seecode.run",
   "dependencies": {
-    "@babel/standalone": "^7.3.1",
-    "@material-ui/core": "^3.9.0",
-    "@material-ui/icons": "^3.0.2",
-    "@material-ui/lab": "^3.0.0-alpha.28",
+    "@babel/standalone": "^7.5.5",
+    "@material-ui/core": "^4.2.1",
+    "@material-ui/styles": "^4.0.2",
+    "@material-ui/icons": "^4.2.1",
+    "@material-ui/lab": "^4.0.0-alpha.20",
     "autosuggest-highlight": "^3.1.1",
     "babel-plugin-dynamic-import-webpack": "^1.1.0",
     "classnames": "^2.2.6",
     "deep-diff": "^1.0.2",
-    "firebase": "^5.8.0",
-    "firepad": "^1.5.1",
-    "jquery": "^3.3.1",
+    "firebase": "^6.3.1",
+    "firepad": "^1.5.3",
+    "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
     "jsan": "^3.1.13",
-    "jscodeshift": "^0.6.2",
-    "jss": "^10.0.0-alpha.8",
-    "lodash": "^4.17.11",
-    "mdi-material-ui": "^5.8.0",
-    "monaco-editor": "^0.15.6",
+    "jscodeshift": "^0.6.4",
+    "jss": "^9.8.7",
+    "lodash": "^4.17.15",
+    "mdi-material-ui": "~6.2.0",
+    "monaco-editor": "^0.17.1",
     "monaco-editor-webpack-plugin": "^1.7.0",
     "parse5": "^5.1.0",
-    "prop-types": "^15.6.2",
-    "randomcolor": "^0.5.3",
-    "react": "^16.7.0",
-    "react-autosuggest": "^9.3.4",
+    "prop-types": "^15.7.2",
+    "randomcolor": "^0.5.4",
+    "react": "^16.8.6",
+    "react-autosuggest": "^9.4.3",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.7.0",
+    "react-dom": "^16.8.6",
     "react-grid-layout": "^0.16.6",
-    "react-highlight-words": "^0.12.0",
-    "react-inspector": "^2.3.0",
+    "react-highlight-words": "^0.16.0",
+    "react-inspector": "^2.3.1",
     "react-jss": "^8.6.1",
-    "react-redux": "^5.0.7",
-    "react-swipeable-views": "^0.13.1",
-    "redux": "^4.0.0",
-    "redux-observable": "^1.0.0",
-    "rxjs": "^6.2.2",
-    "save": "^2.3.2",
+    "react-redux": "^5.1.1",
+    "react-swipeable-views": "^0.13.3",
+    "redux": "^4.0.4",
+    "redux-observable": "^1.1.0",
+    "rxjs": "^6.5.2",
+    "save": "^2.4.0",
     "store": "^2.0.12"
   },
   "devDependencies": {
-    "@babel/cli": "7.0.0",
-    "@babel/core": "7.0.0",
-    "@babel/node": "7.0.0",
-    "@babel/plugin-proposal-class-properties": "7.0.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
-    "@babel/plugin-transform-object-assign": "7.0.0",
-    "@babel/plugin-transform-runtime": "7.0.0",
-    "@babel/preset-env": "7.0.0",
+    "@babel/cli": "7.5.5",
+    "@babel/core": "7.5.5",
+    "@babel/node": "7.5.5",
+    "@babel/plugin-proposal-class-properties": "7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "7.5.5",
+    "@babel/plugin-transform-object-assign": "7.2.0",
+    "@babel/plugin-transform-runtime": "7.5.5",
+    "@babel/preset-env": "7.5.5",
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.0.0",
     "@babel/runtime": "7.0.0",
-    "@types/react": "^16.3.14",
-    "babel-preset-env": "^1.6.1",
-    "babel-eslint": "^9.0.0",
-    "babel-loader": "^8.0.0",
-    "babel-plugin-istanbul": "^5.0.0",
-    "babel-plugin-module-resolver": "^3.0.0",
-    "babel-plugin-preval": "^2.0.0",
-    "babel-plugin-react-remove-properties": "^0.2.5",
-    "babel-plugin-transform-dev-warning": "^0.1.0",
+    "@types/react": "^16.8.23",
+    "babel-preset-env": "^1.7.0",
+    "babel-eslint": "9.0.0",
+    "babel-loader": "8.0.5",
+    "babel-plugin-istanbul": "^5.2.0",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "babel-plugin-preval": "^2.0.1",
+    "babel-plugin-react-remove-properties": "^0.3.0",
+    "babel-plugin-transform-dev-warning": "^0.1.1",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.10",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "cross-env": "^5.2.0",
-    "eslint": "^4.16.0",
+    "eslint": "5.12.0",
     "eslint-config-google": "^0.9.1",
-    "eslint-plugin-react": "^7.10.0",
+    "eslint-plugin-react": "^7.14.3",
     "install-peers": "^1.0.2",
-    "react-app-rewired": "^1.5.2",
-    "react-scripts": "^1.1.4",
-    "redux-devtools": "^3.4.1",
+    "react-app-rewired": "^2.1.3",
+    "react-scripts": "^2.1.8",
+    "redux-devtools": "^3.5.0",
     "redux-devtools-dock-monitor": "^1.1.3",
-    "redux-devtools-filterable-log-monitor": "^0.8.0",
+    "redux-devtools-filterable-log-monitor": "^0.8.1",
     "redux-devtools-log-monitor": "^1.4.0",
     "source-map-explorer": "^1.5.0"
   },
@@ -91,5 +92,11 @@
     "analyze-bundle": "bundle-buddy build/static/*.map build/static/*/*.map",
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
