--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -6,42 +6,42 @@
   "proxy": "http://localhost:5000",
   "homepage": "https://seecode.run",
   "dependencies": {
-    "@babel/standalone": "^7.5.5",
-    "@material-ui/core": "^4.2.1",
-    "@material-ui/styles": "^4.0.2",
-    "@material-ui/icons": "^4.2.1",
-    "@material-ui/lab": "^4.0.0-alpha.20",
+    "@babel/standalone": "^7.8.8",
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.45",
+    "@material-ui/styles": "^4.9.0",
     "autosuggest-highlight": "^3.1.1",
     "babel-plugin-dynamic-import-webpack": "^1.1.0",
     "classnames": "^2.2.6",
     "deep-diff": "^1.0.2",
-    "firebase": "^6.3.1",
-    "firepad": "^1.5.3",
+    "firebase": "^7.11.0",
+    "firepad": "1.5.3",
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
     "jsan": "^3.1.13",
-    "jscodeshift": "^0.6.4",
+    "jscodeshift": "^0.7.0",
     "jss": "^9.8.7",
     "lodash": "^4.17.15",
     "mdi-material-ui": "~6.2.0",
-    "monaco-editor": "^0.17.1",
-    "monaco-editor-webpack-plugin": "^1.7.0",
-    "parse5": "^5.1.0",
+    "monaco-editor": "^0.20.0",
+    "monaco-editor-webpack-plugin": "^1.9.0",
+    "parse5": "^5.1.1",
     "prop-types": "^15.7.2",
     "randomcolor": "^0.5.4",
-    "react": "^16.8.6",
+    "react": "^16.13.0",
     "react-autosuggest": "^9.4.3",
-    "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.8.6",
+    "react-copy-to-clipboard": "^5.0.2",
+    "react-dom": "^16.13.0",
     "react-grid-layout": "^0.16.6",
     "react-highlight-words": "^0.16.0",
     "react-inspector": "^2.3.1",
     "react-jss": "^8.6.1",
-    "react-redux": "^5.1.1",
-    "react-swipeable-views": "^0.13.3",
-    "redux": "^4.0.4",
-    "redux-observable": "^1.1.0",
-    "rxjs": "^6.5.2",
+    "react-redux": "^5.1.2",
+    "react-swipeable-views": "^0.13.9",
+    "redux": "^4.0.5",
+    "redux-observable": "^1.2.0",
+    "rxjs": "^6.5.4",
     "save": "^2.4.0",
     "store": "^2.0.12"
   },
@@ -57,8 +57,7 @@
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.0.0",
     "@babel/runtime": "7.0.0",
-    "@types/react": "^16.8.23",
-    "babel-preset-env": "^1.7.0",
+    "@types/react": "^16.9.23",
     "babel-eslint": "9.0.0",
     "babel-loader": "8.0.5",
     "babel-plugin-istanbul": "^5.2.0",
@@ -68,18 +67,19 @@
     "babel-plugin-transform-dev-warning": "^0.1.1",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "cross-env": "^5.2.0",
+    "babel-preset-env": "^1.7.0",
+    "cross-env": "^5.2.1",
     "eslint": "5.12.0",
     "eslint-config-google": "^0.9.1",
-    "eslint-plugin-react": "^7.14.3",
-    "install-peers": "^1.0.2",
-    "react-app-rewired": "^2.1.3",
+    "eslint-plugin-react": "^7.19.0",
+    "install-peers": "^1.0.3",
+    "react-app-rewired": "^2.1.5",
     "react-scripts": "^2.1.8",
     "redux-devtools": "^3.5.0",
     "redux-devtools-dock-monitor": "^1.1.3",
     "redux-devtools-filterable-log-monitor": "^0.8.1",
     "redux-devtools-log-monitor": "^1.4.0",
-    "source-map-explorer": "^1.5.0"
+    "source-map-explorer": "^1.8.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
