Firebase update: changes auth methods, add dependencies.

--- a/functions/package.json
+++ b/functions/package.json
@@ -1,24 +1,29 @@
 {
   "name": "functions",
-  "description": "Cloud Functions for seeCode.run: adds, copies and authenticate pastebins. Also does backups",
+  "description": "Cloud Functions for seeCode.run: adds, copies and authenticate pastebins",
   "scripts": {
-    "serve": "firebase use development; cross-env NODE_ENV=development firebase serve --only functions",
-    "win-serve": "firebase use development & firebase serve --only functions",
-    "serve-prod": "firebase use production; cross-env NODE_ENV=development firebase serve --only functions",
-    "shell": "cross-env NODE_ENV=development firebase experimental:functions:shell",
-    "start": "cross-env NODE_ENV=development npm run shell",
-    "deploy": "firebase use production; firebase deploy --only functions; firebase use default",
-    "deploy-dev": "firebase use development; cross-env NODE_ENV=development firebase deploy --only functions; firebase use default",
-    "logs": "firebase use production firebase functions:log; firebase use default",
-    "logs-dev": "firebase use development; cross-env NODE_ENV=development firebase functions:log; firebase use default"
+    "serve": "cross-env NODE_ENV=development & firebase use development & firebase serve --only functions",
+    "serve-prod": "cross-env NODE_ENV=production & firebase use production & firebase serve --only functions",
+    "shell": "firebase experimental:functions:shell",
+    "start": "npm run shell",
+    "deploy": "cross-env NODE_ENV=production & firebase use production & firebase deploy --only functions",
+    "deploy-dev": "cross-env NODE_ENV=development & firebase use development & firebase deploy --only functions",
+    "logs": "cross-env NODE_ENV=production & firebase use production & firebase functions:log",
+    "logs-dev": "cross-env NODE_ENV=development & firebase use development & firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "^5.13.1",
-    "firebase-functions": "^2.0.4",
-    "firepad": "^1.5.0"
+    "firebase": "^7.11.0",
+    "firebase-admin": "^8.9.2",
+    "firebase-functions": "^3.3.0",
+    "firepad": "^1.5.9"
   },
   "private": true,
   "devDependencies": {
-    "cross-env": "^5.1.4"
+    "jest": "^25.1.0",
+    "supertest": "^5.0.0-0",
+    "cross-env": "^7.0.2"
+  },
+  "engines": {
+    "node": "8"
   }
 }
