Fixes ObjectInspector alignment errors. Updated lock files.

--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -6,7 +6,7 @@
   "proxy": "http://localhost:5000",
   "homepage": "https://seecode.run",
   "dependencies": {
-    "@babel/standalone": "^7.9.0",
+    "@babel/standalone": "^7.9.3",
     "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.46",
@@ -23,7 +23,7 @@
     "jscodeshift": "^0.7.0",
     "jss": "^9.8.7",
     "lodash": "^4.17.15",
-    "mdi-material-ui": "~6.2.0",
+    "mdi-material-ui": "^6.13.0",
     "monaco-editor": "^0.20.0",
     "monaco-editor-webpack-plugin": "^1.9.0",
     "parse5": "^5.1.1",
@@ -33,9 +33,9 @@
     "react-autosuggest": "^9.4.3",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
-    "react-grid-layout": "^0.16.6",
+    "react-grid-layout": "^0.18.3",
     "react-highlight-words": "^0.16.0",
-    "react-inspector": "^2.3.1",
+    "react-inspector": "^5.0.1",
     "react-jss": "^8.6.1",
     "react-redux": "^5.1.2",
     "react-swipeable-views": "^0.13.9",
@@ -71,7 +71,7 @@
     "babel-preset-env": "^1.7.0",
     "cross-env": "^5.2.1",
     "eslint": "^6.6.0",
-    "eslint-config-google": "^0.9.1",
+    "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.19.0",
     "react-app-rewired": "^2.1.5",
     "react-scripts": "3.4.1",
