--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -90,7 +90,7 @@
     "start-url": "cross-env PUBLIC_URL='https://seecode.run' & react-app-rewired start",
     "build-with-source-maps": "cross-env PUBLIC_URL='https://seecode.run' & react-app-rewired build & rm -rf ./build/fireco/monaco-editor/dev/ & rm -rf ./build/fireco/monaco-editor/esm/",
     "build-monaco-amd": "cross-env PUBLIC_URL='https://seecode.run' GENERATE_SOURCEMAP=false & react-app-rewired build & rm -rf ./build/fireco/monaco-editor/dev/ & rm -rf ./build/fireco/monaco-editor/esm/ & rm -rf ./build/fireco/monaco-editor/min-maps/",
-    "build": "cross-env PUBLIC_URL='https://seecode.run' GENERATE_SOURCEMAP=false & react-app-rewired build",
+    "build": "cross-env PUBLIC_URL='https://seecode.run' GENERATE_SOURCEMAP=false & react-app-rewired --max_old_space_size=4096 build",
     "build-dev": "firebase use development & cross-env PUBLIC_URL='https://seecoderun-2.firebaseapp.com' react-app-rewired build & rm -rf ./build/fireco/monaco-editor/esm/",
     "analyze-main": "source-map-explorer build/static/js/main.*",
     "analyze-bundle": "bundle-buddy build/static/*.map build/static/*/*.map",
