Adds new Autocomplete library. Adds Infinity List to Chat.js Adds separate counters to trace and console updates. Adds Redux connect to sync chat and playground loading after editors and firebase connections are mounted.

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ package-lock.json
 .vscode/
 .idea/
 .DS_Store
-.env.local
+scr-app/.env.local
 .env.development.local
 .env.test.local
 .env.production.local
