--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -15,6 +15,7 @@
     "redux-observable": "^1.2.0",
     "rxjs": "^6.5.5",
     "classnames": "^2.2.6",
+    "clsx": "^1.1.0",
     "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.53",
@@ -47,8 +48,10 @@
     "react-inspector": "^5.0.1",
     "react-window": "^1.8.5",
     "react-window-infinite-loader": "^1.0.5",
+    "react-virtualized": "^9.21.2",
     "react-virtualized-auto-sizer": "^1.0.2",
-    "autosuggest-highlight": "^3.1.1"
+    "autosuggest-highlight": "^3.1.1",
+    "notistack": "^0.9.16"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
