using published npm package: monaco-jsx-highlighter

--- a/scr-app/package.json
+++ b/scr-app/package.json
@@ -6,52 +6,54 @@
   "proxy": "http://localhost:5000",
   "homepage": "https://seecode.run",
   "dependencies": {
+    "@babel/standalone": "^7.9.6",
+    "@material-ui/core": "^4.10.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.54",
+    "@material-ui/styles": "^4.10.0",
+    "autosuggest-highlight": "^3.1.1",
+    "babel-plugin-dynamic-import-webpack": "^1.1.0",
+    "classnames": "^2.2.6",
+    "clsx": "^1.1.0",
+    "deep-diff": "^1.0.2",
+    "firebase": "^7.14.5",
+    "firepad": "^1.5.10",
+    "immutability-helper": "^3.0.2",
+    "jquery": "^3.5.1",
+    "jquery-ui": "^1.12.1",
+    "jsan": "^3.1.13",
+    "jscodeshift": "^0.9.0",
+    "lodash": "^4.17.15",
+    "match-sorter": "^4.1.0",
+    "mdi-material-ui": "^6.15.0",
+    "memoize-one": "^5.1.1",
+    "monaco-editor": "^0.20.0",
+    "monaco-editor-webpack-plugin": "^1.9.0",
+    "monaco-jsx-highlighter": "^0.0.8",
+    "notistack": "^0.9.16",
+    "parse5": "^6.0.0",
     "prop-types": "^15.7.2",
+    "randomcolor": "^0.5.4",
     "react": "^16.13.1",
+    "react-autosuggest": "^10.0.2",
+    "react-copy-to-clipboard": "^5.0.2",
+    "react-dnd": "^11.1.1",
+    "react-dnd-html5-backend": "^11.1.1",
     "react-dom": "^16.13.1",
+    "react-grid-layout": "^0.18.3",
+    "react-highlight-words": "^0.16.0",
+    "react-inspector": "^5.0.1",
     "react-redux": "^7.2.0",
+    "react-virtualized-auto-sizer": "^1.0.2",
+    "react-window": "^1.8.5",
+    "react-window-infinite-loader": "^1.0.5",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-observable": "^1.2.0",
     "rxjs": "^6.5.5",
-    "classnames": "^2.2.6",
-    "clsx": "^1.1.0",
-    "@material-ui/core": "^4.9.14",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.53",
-    "@material-ui/styles": "^4.9.14",
-    "mdi-material-ui": "^6.14.0",
-    "jquery": "^3.5.1",
-    "jquery-ui": "^1.12.1",
-    "monaco-editor": "^0.20.0",
-    "monaco-editor-webpack-plugin": "^1.9.0",
-    "@babel/standalone": "^7.9.6",
-    "babel-plugin-dynamic-import-webpack": "^1.1.0",
-    "firebase": "^7.14.4",
-    "firepad": "^1.5.10",
-    "jscodeshift": "^0.9.0",
-    "parse5": "^6.0.0",
-    "jsan": "^3.1.13",
-    "deep-diff": "^1.0.2",
-    "match-sorter": "^4.1.0",
     "save": "^2.4.0",
     "store": "^2.0.12",
-    "immutability-helper": "^3.0.2",
-    "lodash": "^4.17.15",
-    "randomcolor": "^0.5.4",
-    "react-autosuggest": "^10.0.2",
-    "react-copy-to-clipboard": "^5.0.2",
-    "react-dnd": "^10.0.2",
-    "react-dnd-html5-backend": "^10.0.2",
-    "react-grid-layout": "^0.18.3",
-    "react-highlight-words": "^0.16.0",
-    "react-inspector": "^5.0.1",
-    "react-window": "^1.8.5",
-    "react-window-infinite-loader": "^1.0.5",
-    "react-virtualized": "^9.21.2",
-    "react-virtualized-auto-sizer": "^1.0.2",
-    "autosuggest-highlight": "^3.1.1",
-    "notistack": "^0.9.16"
+    "use-resize-observer": "^6.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
