--- a/packages/monaco-jsx-syntax-highlighter/package.json
+++ b/packages/monaco-jsx-syntax-highlighter/package.json
@@ -29,5 +29,5 @@
   "bugs": {
     "url": "https://github.com/devuxd/SeeCodeRun/issues"
   },
-  "homepage": "https://github.com/devuxd/SeeCodeRun/tree/master/packages/monaco-jsx-syntax-highlighter#readme"
+  "homepage": "https://github.com/devuxd/SeeCodeRun/tree/master/packages/monaco-jsx-syntax-highlighter#monaco-jsx-highlighter"
 }
